; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/gdi32/extr_GetRandomRgn.c_Test_GetRandomRgn_CLIPRGN.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/gdi32/extr_GetRandomRgn.c_Test_GetRandomRgn_CLIPRGN.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32 }

@.str = private unnamed_addr constant [24 x i8] c"Coun't create a region\0A\00", align 1
@.str.1 = private unnamed_addr constant [20 x i8] c"Coun't create a dc\0A\00", align 1
@CLIPRGN = common dso_local global i32 0, align 4
@ghdcWindow = common dso_local global i32 0, align 4
@ghwnd = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Test_GetRandomRgn_CLIPRGN() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__, align 4
  %6 = call i32 @CreateRectRgn(i32 11, i32 17, i32 23, i32 42)
  store i32 %6, i32* %2, align 4
  %7 = load i32, i32* %2, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %11, label %9

9:                                                ; preds = %0
  %10 = call i32 @printf(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  br label %116

11:                                               ; preds = %0
  %12 = call i32 @CreateCompatibleDC(i32 0)
  store i32 %12, i32* %1, align 4
  %13 = load i32, i32* %1, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %17, label %15

15:                                               ; preds = %11
  %16 = call i32 @printf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0))
  br label %116

17:                                               ; preds = %11
  %18 = load i32, i32* %1, align 4
  %19 = load i32, i32* %2, align 4
  %20 = load i32, i32* @CLIPRGN, align 4
  %21 = call i32 @GetRandomRgn(i32 %18, i32 %19, i32 %20)
  store i32 %21, i32* %4, align 4
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @ok_int(i32 %22, i32 0)
  %24 = load i32, i32* %2, align 4
  %25 = call i32 @GetRgnBox(i32 %24, %struct.TYPE_3__* %5)
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 3
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @ok_long(i32 %27, i32 11)
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 2
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @ok_long(i32 %30, i32 17)
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @ok_long(i32 %33, i32 23)
  %35 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @ok_long(i32 %36, i32 42)
  %38 = call i32 @CreateRectRgn(i32 1, i32 2, i32 3, i32 4)
  store i32 %38, i32* %3, align 4
  %39 = load i32, i32* %1, align 4
  %40 = load i32, i32* %3, align 4
  %41 = call i32 @SelectClipRgn(i32 %39, i32 %40)
  %42 = load i32, i32* %3, align 4
  %43 = call i32 @DeleteObject(i32 %42)
  %44 = load i32, i32* %1, align 4
  %45 = load i32, i32* %2, align 4
  %46 = load i32, i32* @CLIPRGN, align 4
  %47 = call i32 @GetRandomRgn(i32 %44, i32 %45, i32 %46)
  store i32 %47, i32* %4, align 4
  %48 = load i32, i32* %4, align 4
  %49 = call i32 @ok_int(i32 %48, i32 1)
  %50 = load i32, i32* %2, align 4
  %51 = call i32 @GetRgnBox(i32 %50, %struct.TYPE_3__* %5)
  %52 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 3
  %53 = load i32, i32* %52, align 4
  %54 = call i32 @ok_long(i32 %53, i32 1)
  %55 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 2
  %56 = load i32, i32* %55, align 4
  %57 = call i32 @ok_long(i32 %56, i32 2)
  %58 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  %59 = load i32, i32* %58, align 4
  %60 = call i32 @ok_long(i32 %59, i32 3)
  %61 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %62 = load i32, i32* %61, align 4
  %63 = call i32 @ok_long(i32 %62, i32 4)
  %64 = call i32 @CreateRectRgn(i32 2, i32 3, i32 4, i32 5)
  store i32 %64, i32* %3, align 4
  %65 = load i32, i32* @ghdcWindow, align 4
  %66 = load i32, i32* %3, align 4
  %67 = call i32 @SelectClipRgn(i32 %65, i32 %66)
  %68 = load i32, i32* %3, align 4
  %69 = call i32 @DeleteObject(i32 %68)
  %70 = load i32, i32* @ghdcWindow, align 4
  %71 = load i32, i32* %2, align 4
  %72 = load i32, i32* @CLIPRGN, align 4
  %73 = call i32 @GetRandomRgn(i32 %70, i32 %71, i32 %72)
  store i32 %73, i32* %4, align 4
  %74 = load i32, i32* %4, align 4
  %75 = call i32 @ok_int(i32 %74, i32 1)
  %76 = load i32, i32* %2, align 4
  %77 = call i32 @GetRgnBox(i32 %76, %struct.TYPE_3__* %5)
  %78 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 3
  %79 = load i32, i32* %78, align 4
  %80 = call i32 @ok_long(i32 %79, i32 2)
  %81 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 2
  %82 = load i32, i32* %81, align 4
  %83 = call i32 @ok_long(i32 %82, i32 3)
  %84 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  %85 = load i32, i32* %84, align 4
  %86 = call i32 @ok_long(i32 %85, i32 4)
  %87 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %88 = load i32, i32* %87, align 4
  %89 = call i32 @ok_long(i32 %88, i32 5)
  %90 = load i32, i32* @ghwnd, align 4
  %91 = call i32 @MoveWindow(i32 %90, i32 200, i32 400, i32 100, i32 100, i32 0)
  %92 = load i32, i32* @ghdcWindow, align 4
  %93 = load i32, i32* %2, align 4
  %94 = load i32, i32* @CLIPRGN, align 4
  %95 = call i32 @GetRandomRgn(i32 %92, i32 %93, i32 %94)
  store i32 %95, i32* %4, align 4
  %96 = load i32, i32* %4, align 4
  %97 = call i32 @ok_int(i32 %96, i32 1)
  %98 = load i32, i32* %2, align 4
  %99 = call i32 @GetRgnBox(i32 %98, %struct.TYPE_3__* %5)
  %100 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 3
  %101 = load i32, i32* %100, align 4
  %102 = call i32 @ok_long(i32 %101, i32 2)
  %103 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 2
  %104 = load i32, i32* %103, align 4
  %105 = call i32 @ok_long(i32 %104, i32 3)
  %106 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  %107 = load i32, i32* %106, align 4
  %108 = call i32 @ok_long(i32 %107, i32 4)
  %109 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %110 = load i32, i32* %109, align 4
  %111 = call i32 @ok_long(i32 %110, i32 5)
  %112 = load i32, i32* %2, align 4
  %113 = call i32 @DeleteObject(i32 %112)
  %114 = load i32, i32* %1, align 4
  %115 = call i32 @DeleteDC(i32 %114)
  br label %116

116:                                              ; preds = %17, %15, %9
  ret void
}

declare dso_local i32 @CreateRectRgn(i32, i32, i32, i32) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @CreateCompatibleDC(i32) #1

declare dso_local i32 @GetRandomRgn(i32, i32, i32) #1

declare dso_local i32 @ok_int(i32, i32) #1

declare dso_local i32 @GetRgnBox(i32, %struct.TYPE_3__*) #1

declare dso_local i32 @ok_long(i32, i32) #1

declare dso_local i32 @SelectClipRgn(i32, i32) #1

declare dso_local i32 @DeleteObject(i32) #1

declare dso_local i32 @MoveWindow(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @DeleteDC(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
